# web_tools

./: .gitignore  README.md  pyproject.toml
hanspeterradtke/webtools/text_browser/: __main__.py
hanspeterradtke_webtools.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
hpr/web_tools/text_browser/: README.md
test/standalone/: test_playwright_basic.py  test_playwright_click.py  test_playwright_dropdowns.py  test_playwright_dump.py  test_playwright_formvalidation.py  test_playwright_login.py  test_playwright_login_fail.py  test_playwright_radiobuttons.py
test/test_textbrowser/: test_playwright_inputs.py  test_textbrowser_actions.py  test_textbrowser_dropdowns.py  test_textbrowser_formvalidation.py  test_textbrowser_inputs.py  test_textbrowser_login.py  test_textbrowser_login_fail.py  test_textbrowser_radiobuttons.py
text_browser/: README.md  __init__.py  __main__.py  core.py
