[build-system]
requires      = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name            = "hanspeterradtke-webtools"
version         = "0.1.0"
description     = "Programmable browser interface and utilities"
readme          = "README.md"
requires-python = ">=3.8"
dependencies    = []

[tool.setuptools.packages.find]
where   = ["."]
include = ["hanspeterradtke*"]
